chore: rename settings field
translate platform -> provider

--- a/config.yml.example
+++ b/config.yml.example
@@ -19,7 +19,7 @@ rsshub:
     fallback: false
 
 translate:
-  platform: libretranslate
+  provider: libretranslate
   settings: |
     api:
       url: "http://localhost:5000/translate"
